# geodesic

./: .gitignore  Cargo.toml  README.md  assets.json  scene.json
examples/: builder.rs  load.rs  save.rs  simple.rs
inputs/: assets.json  camera.json  scene.json
src/: aabb.rs  assets.rs  bounded.rs  bvh.rs  bvh_builder.rs  bvh_config.rs  camera.rs  config.rs  hit.rs  instance.rs  lib.rs  mesh.rs  ortho_camera.rs  persistable.rs  plane.rs  ray.rs  scene.rs  scene_builder.rs  scene_object.rs  serialization.rs  sphere.rs  torus.rs  traceable.rs  triangle.rs
src/bvh/: bvh.rs  bvh_builder.rs  bvh_config.rs  mod.rs
src/error/: bvh.rs  bvh_config.rs  file_parsing.rs  geometry.rs  mod.rs  numeric.rs  scene.rs  transformation.rs
src/geometry/: aabb.rs  mesh.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
src/rt/: hit.rs  mod.rs  ray.rs
src/scene/: assets.rs  camera.rs  instance.rs  mod.rs  projection.rs  scene.rs  scene_builder.rs  scene_object.rs
src/serialization/: assets.rs  camera.rs  mod.rs  projection.rs  scene.rs  scene_object.rs  transform.rs
src/traits/: bounded.rs  failable_numeric.rs  mod.rs  persistable.rs  traceable.rs
